# pvz-trainer-slint

./: Cargo.toml  README.md
src/: main.rs  offset.rs  trainer.rs
ui/: app-window.slint
