[package]
name = "pvz-trainer-slint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
libmem = "5.0.4"
env_logger = "0.11.8"
log = "0.4.27"
open = "5.3.2"

[build-dependencies]
slint-build = "1.8.0"


[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_UI_WindowsAndMessaging",
]